Fixed playerbox clipping with log

--- a/PokeClicker/system.css
+++ b/PokeClicker/system.css
@@ -35,7 +35,7 @@
 }
 
 .container {
-	width:80% !important
+	width:90% !important
 }
 
 #myModalLabel{
